--- a/nepautok.css
+++ b/nepautok.css
@@ -13,3 +13,14 @@
 	float: right;
 	margin-bottom: 10px;
 }
+
+a{
+	color: darkgray;
+	background-color: lightgray;
+	text-decoration: none;
+
+}
+
+a:hover{
+	color: chocolate;
+}
