--- a/nepautok.css
+++ b/nepautok.css
@@ -1,7 +1,9 @@
-#container {
+.container {
 	padding: 20px;
 	border-radius: 5px;
 	box-shadow: 0px 5px 15px grey;
+	width: 700px;
+	margin: 50px auto;
 }
 
 .left {
