--- a/nepautok.css
+++ b/nepautok.css
@@ -2,7 +2,7 @@
 	padding: 20px;
 	border-radius: 5px;
 	box-shadow: 0px 5px 15px grey;
-	width: 700px;
+	max-width: 700px;
 	margin: 50px auto;
 }
 
@@ -54,5 +54,10 @@ a:hover{
     width: 90%;
     margin: auto;
   }
-  
+  .left{
+    float: none;
+  }
+  .right{
+    float: none;
+  }
   }
